Updated depreciated url encoder