@@ -1,12 +1,13 @@
 package edu.bsu.cs;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
 import java.nio.charset.Charset;
 
-public class Article {
+public class ReadJSONFile {
 
     public static void main(String[] args) throws IOException {
         URLConnection connection = connectToWikipedia();
@@ -16,9 +17,9 @@ public class Article {
 
     private static URLConnection connectToWikipedia() throws IOException {
         String encodedUrlString = "https://en.wikipedia.org/w/api.php?action=query&format=json&prop=revisions&titles=" +
-                URLEncoder.encode("Zappa", Charset.defaultCharset()) +
-                "&rvprop=timestamp|user&rvlimit=4&redirects";
-        URL url = new URL(encodedUrlString);
+                URLEncoder.encode("Sandwich", Charset.defaultCharset()) +
+                "&rvprop=timestamp%7Cuser&rvlimit=4&redirects";
+        URL url = URI.create(encodedUrlString).toURL();
         URLConnection connection = url.openConnection();
         connection.setRequestProperty("User-Agent",
                 "CS222FirstProject/0.1 (user@bsu.edu)");
